tests/resources/SyntaxErrorTest/sources/MalformedChar.stab
public class C {
	char c = 'a\';
}
